# genomics

./: .gitignore  TCGA_03.11.ipynb  TCGA_T.ipynb  main.py  modeling_TCGA.ipynb  modeling_TCGA_all_genes.ipynb  modeling_TCGA_pca.ipynb  modeling_TCGA_primeiro.ipynb  pyproject.toml
