[project]
name = "genomics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "catboost>=1.2.10",
    "category-encoders>=2.9.0",
    "ipykernel>=7.2.0",
    "lightgbm>=4.6.0",
    "pandas>=3.0.0",
    "pybioportal>=1.0.1",
    "shap>=0.49.1",
    "tabpfn>=2.0.3",
    "xgboost>=3.2.0",
]
